# filtering_experiments

./: prompt.md
experiments/: .gitignore  README.md  explore_pairs.py  pyproject.toml  replot.py  run_embedding.py  run_experiments.py  run_realworld.py  tables.md  transcript.txt
experiments/data/: covertype.json  embedding_bge.json  embedding_bge_vary_NB.json  embedding_minilm.json  embedding_minilm_vary_NB.json  mnist.json  mnist_vary_NS.json  newsgroups.json  newsgroups_vary_NS.json  vary_NB.json  vary_NB_small_gamma.json  vary_NS.json  vary_dimension.json  vary_gamma.json  weak_separation.json  weak_separation_small_gamma.json
